--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     ],
     "require": {
         "php": ">=5.3.1",
-		"eden-php/core": ">=1.0.0"
+		"eden-php/core": "1.*"
     },
     "autoload": {
-         "psr-0": { "Eden\\": "library/" }
+         "psr-0": { "Eden\\Images": "" }
     }
 }
