--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.1",
-		"eden-php/core": "1.*"
+		"eden/core": "1.*"
     },
     "autoload": {
          "psr-0": { "Eden\\Image": "" }
