--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.1",
-		"eden/file": "2.*"
+		"eden/file": "4.x-dev"
     },
     "autoload": {
          "psr-4": { "Eden\\Image\\": "/src" }
