--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
 		"eden/file": "4.x-dev"
     },
     "autoload": {
-         "psr-4": { "Eden\\Image\\": "/src" }
+         "psr-4": { "Eden\\Image\\": "src/" }
     }
 }
